--- a/src/sass/modules/promotions.scss
+++ b/src/sass/modules/promotions.scss
@@ -1,4 +1,10 @@
 .promotion-container {
+	@extend .grid-66;
+	@extend .tablet-grid-66;
+	@extend .mobile-grid-100;
+	@extend .suffix-33;
+	@extend .tablet-suffix-33;
+
 	background-color: $white;
 	padding: 20px 10px 0 10px;
 	margin-bottom: 30px;
@@ -8,7 +14,6 @@
 	@include box-shadow(0 14px 28px $grey-lightest);
 
 	@media #{$desktop} {
-		max-width: 60%;
 		padding: 20px 20px 0 20px;
 	}
 
